fix: favicon and spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1292,12 +1292,13 @@ input, select, textarea {
 			width: 100%;
 			height: auto;
 			min-height: 0;
-			line-height: 2.8em;
+			line-height: 1.5em;
 			text-align: center;
 			cursor: default;
 			z-index: 1;
 			font-size: 0.9em;
-			padding: 0;
+			padding: 0.6em 1.2em;
+			box-sizing: border-box;
 		}
 
 		.poptrox-popup .caption:empty {
@@ -1473,6 +1474,10 @@ input, select, textarea {
 				object-fit: cover;
 				object-position: center;
 				display: block;
+			}
+
+		.gallery article {
+				padding: 2px;
 			}
 
 			.gallery article:nth-last-child(1n) {
